infrastructure/zitadel/ingress.yaml
apiVersion: networking.internal.knative.dev/v1alpha1
kind: Ingress
metadata:
  name: zitadel
  namespace: zitadel
  labels:
    serving.knative.dev/route: zitadel
    serving.knative.dev/routeNamespace: zitadel
    serving.knative.dev/service: zitadel
  annotations:
    networking.knative.dev/ingress.class: kourier.ingress.networking.knative.dev
spec:
  rules:
    - hosts:
        - auth.192.168.1.249.sslip.io
      visibility: ExternalIP
      http:
        paths:
          - splits:
              - serviceName: zitadel-zitadel
                serviceNamespace: zitadel
                servicePort: 8080
                percent: 100
  httpOption: Enabled
  tls:
    - hosts:
        - auth.192.168.1.249.sslip.io
      secretName: zitadel-tls-secret
      secretNamespace: zitadel
